@@ -81,7 +81,7 @@ INSERT IGNORE INTO `config` (`name`, `value`) VALUES
 ('PREVENT_EXTERNAL_LOGIN_ADMIN', '1'),
 ('PREVENT_EXTERNAL_LOGIN_RESELLER', '1'),
 ('PREVENT_EXTERNAL_LOGIN_CLIENT', '1'),
-('DATABASE_REVISION', '121'),
+('DATABASE_REVISION', '122'),
 ('PHPINI_ALLOW_URL_FOPEN', 'off'),
 ('PHPINI_DISPLAY_ERRORS', 'off'),
 ('PHPINI_UPLOAD_MAX_FILESIZE', '10'),
@@ -169,7 +169,7 @@ CREATE TABLE IF NOT EXISTS `domain_aliasses` (
   `alias_status` varchar(255) collate utf8_unicode_ci default NULL,
   `alias_mount` varchar(200) collate utf8_unicode_ci default NULL,
   `alias_ip_id` int(10) unsigned default NULL,
-  `url_forward` varchar(200) collate utf8_unicode_ci default NULL,
+  `url_forward` varchar(255) collate utf8_unicode_ci NOT NULL default 'no',
   `external_mail` varchar(15) collate utf8_unicode_ci NOT NULL default 'off',
   `external_mail_dns_ids` varchar(255) collate utf8_unicode_ci NOT NULL,
   PRIMARY KEY  (`alias_id`),
@@ -692,7 +692,7 @@ CREATE TABLE IF NOT EXISTS `subdomain` (
   `domain_id` int(10) unsigned default NULL,
   `subdomain_name` varchar(200) collate utf8_unicode_ci default NULL,
   `subdomain_mount` varchar(200) collate utf8_unicode_ci default NULL,
-  `subdomain_url_forward` varchar(200) COLLATE utf8_unicode_ci DEFAULT NULL,
+  `subdomain_url_forward` varchar(255) collate utf8_unicode_ci NOT NULL default 'no',
   `subdomain_status` varchar(255) collate utf8_unicode_ci default NULL,
   PRIMARY KEY  (`subdomain_id`),
   KEY `domain_id` (`domain_id`)
@@ -709,7 +709,7 @@ CREATE TABLE IF NOT EXISTS `subdomain_alias` (
   `alias_id` int(10) unsigned default NULL,
   `subdomain_alias_name` varchar(200) collate utf8_unicode_ci default NULL,
   `subdomain_alias_mount` varchar(200) collate utf8_unicode_ci default NULL,
-  `subdomain_alias_url_forward` varchar(200) COLLATE utf8_unicode_ci DEFAULT NULL,
+  `subdomain_alias_url_forward` varchar(255) collate utf8_unicode_ci NOT NULL default 'no',
   `subdomain_alias_status` varchar(255) collate utf8_unicode_ci default NULL,
   PRIMARY KEY  (`subdomain_alias_id`),
   KEY `alias_id` (`alias_id`)
