@@ -285,7 +285,7 @@ sub buildHTTPDData{
 		have_cert					=> $haveCert,
 		BWLIMIT						=> $self->{domain_traffic_limit},
 		ALIAS						=> $userName.'sub'.$self->{subdomain_id},
-		FORWARD						=> $self->{subdomain_url_forward},
+		FORWARD						=> (defined $self->{subdomain_url_forward} && $self->{subdomain_url_forward} ne '') ? $self->{subdomain_url_forward} : 'no',
 		DISABLE_FUNCTIONS			=> (exists $phpiniData->{$self->{domain_id}} ? $phpiniData->{$self->{domain_id}}->{disable_functions} : $rdata->{PHPINI_DISABLE_FUNCTIONS}->{value}),
 		MAX_EXECUTION_TIME			=> (exists $phpiniData->{$self->{domain_id}} ? $phpiniData->{$self->{domain_id}}->{max_execution_time} : $rdata->{PHPINI_MAX_EXECUTION_TIME}->{value}),
 		MAX_INPUT_TIME				=> (exists $phpiniData->{$self->{domain_id}} ? $phpiniData->{$self->{domain_id}}->{max_input_time} : $rdata->{PHPINI_MAX_INPUT_TIME}->{value}),
