@@ -50,12 +50,14 @@ Tickets:
 	- Fixed #591: Bug - PHP FPM - SSL connection for the panel is not working
 	- Fixed #593: Bug - Setup (update) is not working
 	- Fixed #595: Enhancement - Allow per item reconfiguration
+	- Fixed #596: Bug - GUI - External mail server feature not implemented
 	- Fixed #599: Bug - Ubuntu auto-installer adapter is broken
 	- Fixed #603 Bug - Awstats Addon - cron task is sending messages to stdout
 	- Fixed #604: Bug - insserv - Script imscp_network is broken: incomplete LSB comment
 	- Fixed #607: Bug - History of customer stats is limited to 3 years
 	- Fixed #609: Bug - PHP FPM - Internal Server Error after deleting any domain
 	- Fixed #610: Cosmetics - i18n issue - Typo
+	- Fixed #619: Bug - HTTP Redirection - Null field - Update errors
 -------------------------------------------------------------------------------------
 i-MSCP 1.1.0-rc1.4
 -------------------------------------------------------------------------------------
